force-app/main/default/objects/Team__c/Team__c.object-meta.xml
<CustomObject>
    <description>Team or organization that hosts group scheduling events</description>
    <label>Team</label>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>