force-app/main/default/objects/Team__c/fields/Is_Organization__c.field-meta.xml
<CustomField>
    <fullName>Is_Organization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Organization</label>
    <type>Checkbox</type>
</CustomField>