force-app/main/default/objects/Team__c/fields/Parent_Organization__c.field-meta.xml
<CustomField>
    <fullName>Parent_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Organization</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Sub-Teams</relationshipLabel>
    <relationshipName>Sub_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>